# ggplotpy

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASING.md  RESEARCH_AND_PLAN.md  STATUS.md  environment.yml  pyproject.toml
.cursor/rules/: ggplotpy-codegen.mdc  ggplotpy-core.mdc  ggplotpy-r-bridge.mdc  ggplotpy-session.mdc  ggplotpy-tests.mdc  ggplotpy-verification.mdc
.cursor/skills/ggplotpy-dev/: SKILL.md
.github/workflows/: ci.yml  codegen.yml  docs.yml  publish.yml
conda/recipe/: meta.yaml
docs/: architecture.md  conf.py  coverage_matrix.md  documentation_plan.md  gallery.md  getting-started.md  implementation_plan.md  implementation_rules.md  index.md  nse_bridge.md  packaging_plan.md  quality_gates.md  testing_guide.md  user_interface.md  validation_strategy.md
docs/api/: index.md
docs/guides/: colab.md  data-conversions.md  databricks.md  installation.md  quickstart.md  troubleshooting.md
docs/scripts/: build_gallery.py  extract_rd.py  render_rd.py
exploration/: README.md
exploration/perf/: README.md  benchmark_ingress.py
notebooks/: 01_mvp_mtcars.ipynb  02_extensions_demo.ipynb  03_synthetic_gallery.ipynb  README.md
project_memory/: README.md  blockers.md  decisions.md  discoveries.md  lessons_learned.md  progress_log.md  resume_prompts.md
r-helper/ggplotpy/: DESCRIPTION  NAMESPACE
r-helper/ggplotpy/R/: aes.R  install.R
scripts/: _apply_oom_fixes.py  _fix_gg.py  _fix_run_tests.ps1.py  _fix_sh.py  _patch_conftest.py  _patch_gg_finally.py  _update_status_log.py  _write_docs_ci.py  _write_run_tests.py  create_notebook.py  generate_stubs.py  pypi_sha256.py  run_tests.ps1  run_tests.sh  verify_ggplot_coverage.py
src/ggplotpy/: __init__.py  display.py
src/ggplotpy/backend/: __init__.py  base.py  inprocess.py  rserve.py  subprocess.py
src/ggplotpy/codegen/: __init__.py  emit.py  reflect.py
src/ggplotpy/core/: __init__.py  _options.py  aes.py  aes_util.py  animate.py  defer.py  errors.py  gg.py  patchwork.py  raw.py  to_r_util.py
src/ggplotpy/data/: __init__.py  arrow.py  pandas_bridge.py  polars_bridge.py  sf_bridge.py  validate.py
src/ggplotpy/ext/: __init__.py
src/ggplotpy/runtime/: __init__.py  bootstrap.py  check_setup.py
tests/: conftest.py
tests/edge/: README.md  conftest.py  test_coordinators_scales.py  test_data_conversions.py  test_data_ingress_edge.py  test_facets_formulas.py  test_invalid_inputs.py  test_layer_aes.py  test_noninteractive_r.py  test_nse_expressions.py  test_subprocess_render.py
tests/extensions/: test_gganimate.py  test_ggrepel.py  test_patchwork.py  test_patchwork_operators.py
tests/gallery/: test_category_coverage.py  test_gallery_render.py  test_visual_baseline.py
tests/gallery/baseline_images/: mtcars_bar.svg.sha256  (+4 more)
tests/integration/: test_facets.py  test_geoms_smoke.py  test_r_escape.py  test_render_basic.py
tests/notebooks/: test_notebooks.py
tests/parity/: test_to_r_parity.py
tests/unit/: test_aes_golden.py  test_bootstrap.py  test_codegen_reflect.py  test_data_ingress.py  test_errors.py  test_ext_lazy.py  test_gg_build.py  test_ggplot2_exports.py  test_layer_values_to_r.py  test_sf_bridge.py  test_to_r_normalize.py  test_ux_errors.py  test_v05_stubs.py
(+6 files in other folders)
